fix: scroll on overflow

--- a/components/dashboard/sidebar/RightHandSidebar.module.css
+++ b/components/dashboard/sidebar/RightHandSidebar.module.css
@@ -24,6 +24,7 @@
   width: 16rem;
   padding-top: 2rem;
   z-index: 20;
+  overflow: auto;
 }
 
 @media (max-width: 1023px) {
